5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1865_1643.log
== TEST (2019-07-04 10:07:44) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]=> 5):
		j=j+1
print(j)
-- ERROR:
File "XXXX", line 8
    if(vet[i]=> 5):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:07:52) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:10:26) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

a=0
b=0

zero=zeros(j,dtype=int)
for i in range(size(vet)):
	if(vet[i]>=5):
		zero[i]=vet[i]
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:10:42) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

a=0
b=0

zero=zeros(j,dtype=int)
for i in range(size(vet)):
	if(vet[i]>=5):
		zero[i]=vet[i]
print(zero)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:11:41) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

a=0
b=0

zero=zeros(j,dtype=int)
for x in range(size(vet)):
	if(vet[i]>=5):
		zero[x]=vet[x]
print(zero)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:12:00) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

a=0
b=0

zero=zeros(j,dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		zero[x]=vet[x]
print(zero)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:12:20) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

a=0
b=0

z=zeros(j,dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[x]=vet[x]
print(z)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:12:29) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

a=0
b=0

z=zeros(8,dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[x]=vet[x]
print(z)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:13:30) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

a=0
b=0

z=zeros(size(vet),dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[x]=vet[x]
print(z)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:15:26) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

a=0
b=0

z=zeros(size(vet),dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[x]=x
	
			
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:15:38) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

a=0
b=0

z=zeros(size(vet),dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[x]=x
print(z)
	
			
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:27:02) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

a=size(vet)-j
b=0
print(a)
z=zeros(size(vet),dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[x]=x

	
			
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:27:37) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

a=size(vet)-j
b=0

z=zeros(a,dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[x]=x
		
print(z)

	
			
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:28:22) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

a=size(vet)-j
b=0

z=zeros(10,dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[x]=x
		
print(z)

	
			
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:29:23) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

z=zeros(j,dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[x]=x
		
print(z)

	
			
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:29:39) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

z=zeros(j+1,dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[x]=x
		
print(z)

	
			
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:30:41) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)

z=zeros(size(vet),dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[x]=x
		
print(z)

	
			
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:29) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)
a=0
z=zeros(j,dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[x]=x		
		
			
			


	
			
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:36:30) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)
a=0
z=zeros(j,dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[a]=x		
		a=a+1
			
			


	
			
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:17) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)
a=0
z=zeros(j,dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[a]=x		
		a=a+1
print(z)			
			


	
			
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:37:27) 
-- CODE:
from numpy import*

vet=array(eval(input("entre com o vetor:")))

zero=zeros(size(vet),dtype=int)
j=0
for i in range(size(vet)):
	if(vet[i]>= 5):
		j=j+1
print(j)
a=0
z=zeros(j,dtype=int)
for x in range(size(vet)):
	if(vet[x]>=5):
		z[a]=x		
		a=a+1
print(z)			
			


	
			
	

-- EXECUTION TIME:
1.18949
-- TEST CASE 1:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99]
---- correct output:
6
[0 3 4 5 6 7]
---- user output:
6
[0 3 4 5 6 7]
-- TEST CASE 2:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,5,2.3,6]
---- correct output:
8
[ 0  3  4  5  6  7  8 10]
---- user output:
8
[ 0  3  4  5  6  7  8 10]
-- TEST CASE 3:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99,6.1,3.6,2.9,10,8]
---- correct output:
9
[ 0  3  4  5  6  7 11 14 15]
---- user output:
9
[ 0  3  4  5  6  7 11 14 15]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
